chore: update public/index.html

--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,15 @@
 
     
   <div class="p-20" id="recomendadas">
+
+<div>
+  <div>
+    <div>
+      
+    </div>
+  </div>
+</div>
+
             <div class="w-48 h-64 shadow-md rounded-lg">
                 <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
                 <div class="w-full h-2/5 bg-secondary rounded-b-lg">
