--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,13 @@
                 </div>
             </div>
         </div>
-
     
   <div class="p-20" id="recomendadas">
 
-<div>
+<div class="w-48">
   <div>
     <div>
-      
+
     </div>
   </div>
 </div>
