--- a/public/index.html
+++ b/public/index.html
@@ -27,19 +27,11 @@
     
   <div class="p-20" id="recomendadas">
 
-<div class="w-48">
-  <div>
-    <div>
-
-    </div>
-  </div>
-</div>
-
             <div class="w-48 h-64 shadow-md rounded-lg">
                 <div class="w-full h-3/5 rounded-t-lg bg-norway bg-cover"></div>
                 <div class="w-full h-2/5 bg-secondary rounded-b-lg">
                     <p class="text-white font-bold text-xl px-4 py-2">Norway</p>
-                    <p class="text-white px-4">Paisajes Increíbles</p>
+                    <p class="text-white text-sm px-4">Paisajes Increíbles</p>
                 </div>
             </div>
         </div>
